--- a/proyectofana/estilointegrantes.css
+++ b/proyectofana/estilointegrantes.css
@@ -1,10 +1,48 @@
-h1 {color:black;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body{
+    background-color: rgb(243, 239, 239);
+}
+
+h1 {color:rgb(206, 27, 27);
     font-size: 60px;
     text-align: center;
-    text-decoration: underline;} 
-li{ color: rgb(12, 12, 12);
- text-align: center;
- text-align: left;
- text-align: right;
- text-align: justify;}
-h2{ font-size: 40px;}
+background-color: rgb(8, 8, 8);} 
+
+h2{ font-size: 40px;
+    margin-left: 50px;
+    text-decoration: underline;}
+
+
+.contenedor{
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    padding-top: 2%;
+}
+
+.div1{
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+}
+
+.div2{
+    display: flex;
+    flex-direction: column;
+
+}
+.div3{
+    display: flex;
+    flex-direction: column;
+}
+.div4{
+     display: flex;
+flex-direction: column;
+}
+head{
+    color: aliceblue;
+}
