--- a/proyectofana/miestilo.css
+++ b/proyectofana/miestilo.css
@@ -1,56 +1,53 @@
-body{
-    background-color: azure;
-    }
-header{
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+*{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: 'Sora', sans-serif;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+/*MENU o NAV*/
+
+
+.nav{
     width: 100%;
-    height: 200px;
-    background-color: #C4F592;
-    margin: 0px;
-    }
-nav{
-        width: 100%;
+    background-color: #000; 
+    height: 80px;
+}
+.nav ul{
+    float: right;
+    margin-right: 20px;
+}
+.nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
     
-        background-color: #C4F592; 
-        list-style-type: none;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-    }
-nav ul li{
-        display: inline-block;
-        font-size: 20px;
-        padding: 20px;
-    }
-nav ul li a:hover {
-        color:red;
-    }
-    
- ul{
-        display: block;
-        list-style-type: disc;
-        margin-block-start: 1em;
-        margin-block-end: 1em;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-        padding-inline-start: 40px;
-    }
-    footer{
+.nav ul li a{
+    line-height: 80px;
+    color: aliceblue;
+    margin: 0 5px;
+    display: inline-block;
+
+}
+.enlace {
+    position: absolute;
+    padding: 20px 50px;
+}
+.logo{
+   height: 40px;
+}
+footer{
         width: 100%;
         height: 50px;
-     background-color: rgb(224, 217, 210);
-      text-align: center;
-      padding: 20px;
-      margin: 20px;
-    }
-.TituloPrincipal{
+        background-color: rgb(224, 217, 210);
         text-align: center;
-        }
-.Titulo{
-    text-align: center;
-    }
-.contenedor{
-            width: 100%;
-            text-align: center;
-         
-        }
+        padding: 20px;
+        margin: 20px;
+}
+
         
