--- a/estilo.css
+++ b/estilo.css
@@ -6,3 +6,70 @@ p {
     text-decoration: underline;
 }
 
+img{border: 5px #343434 solid} 
+
+.conocimientos{ font-size: 25px;
+text-decoration: underline;}
+h2{font-size: 30px;
+text-decoration: underline;}
+ 
+.elementos{font-size: 20px;}
+
+.hobbies{font-size: 25px;
+text-decoration: underline;}
+
+.maquina{ font-size: 20px;}
+
+.mouse{font-size: 25px;
+text-decoration: underline;}
+
+.teclado{ font-size: 20px;}
+
+ul.b {
+    
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0;
+    padding: 0;
+    text-decoration: none;
+    
+}
+ul.b a:hover{
+    color: black;
+    text-decoration: none;
+}
+ul.b a:visited{
+    color: black;
+    text-decoration: none;
+}
+li.c {
+    
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    list-style: none;
+    border-bottom: 1px solid;
+    width: 200px;
+    text-align: center;
+    text-decoration: none;
+}
+li.c a:hover{
+    color: white;
+}
+li.c a:visited{
+    text-decoration: none;
+}
+.contenedorflex {
+    display: flex;
+    
+}
+.textoflex {
+    
+    text-align: left;
+}
+.texto{
+    font-size: medium;
+}
+p{
+    font-size: 130%;
+}
