--- a/estilointegrantes.css
+++ b/estilointegrantes.css
@@ -8,10 +8,11 @@ body{
     background-color: rgb(243, 239, 239);
 }
 
-h1 {color:rgb(206, 27, 27);
+h1 {color:rgb(248, 244, 244);
     font-size: 60px;
     text-align: center;
-background-color: rgb(8, 8, 8);} 
+background-color: rgb(8, 8, 8);
+text-decoration: underline;} 
 
 h2{ font-size: 40px;
     margin-left: 50px;
@@ -24,25 +25,72 @@ h2{ font-size: 40px;
     padding-top: 2%;
 }
 
-.div1{
+.div1 img{
     display: flex;
     flex-direction: column;
     margin-left: 50px;
+    border: 5px #343434 solid;
 }
 
-.div2{
+.div2 img{
     display: flex;
     flex-direction: column;
-
+   border: 5px #343434 solid;
 }
-.div3{
+.div3 img{
     display: flex;
     flex-direction: column;
+    border: 5px #343434 solid;
 }
-.div4{
+.div4 img{
      display: flex;
 flex-direction: column;
+border: 5px #343434 solid;
 }
 head{
     color: aliceblue;
 }
+
+
+.nav{
+    width: 100%;
+    background-color: #000; 
+    height: 80px;}
+    .nav ul{
+        float: right;
+        margin-right: 20px;
+    }
+    .nav ul li {
+        display: inline-block;
+        line-height: 80px;
+        margin: 0 5px;
+    }
+        
+    .nav ul li a{
+        line-height: 80px;
+        color: aliceblue;
+        margin: 0 5px;
+        display: inline-block;}
+        
+.enlace {
+            position: absolute;
+            padding: 20px 50px;
+        }
+        .logo{
+            height: 40px;
+         }
+      *{
+            font-family: 'M PLUS Rounded 1c', sans-serif;
+            font-family: 'Sora', sans-serif;
+            padding: 0;
+            margin: 0;
+            text-decoration: none;
+            list-style: none;
+            box-sizing: border-box;}
+
+
+
+
+
+
+
