--- a/estilointegrantes.css
+++ b/estilointegrantes.css
@@ -1,11 +1,21 @@
+html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 *{
-    box-sizing: border-box;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: 'Sora', sans-serif;
     padding: 0;
     margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
-
+.TituloPagina {
+    text-align: center;
+    background-color: black;
+    color: rgb(255, 255, 255);
+    margin: 0%;
+}
 body{
-    background-color: rgb(243, 239, 239);
+    background-color: rgb(205, 232, 229);
 }
 
 h1 {color:rgb(248, 244, 244);
@@ -16,37 +26,22 @@ text-decoration: underline;}
 
 h2{ font-size: 40px;
     margin-left: 50px;
-    text-decoration: underline;}
+}
 
 
 .contenedor{
     display:grid;
     grid-template-columns: repeat(4,1fr);
     padding-top: 2%;
+    margin: 5%;
 }
 
 .div1 img{
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
     border: 5px #343434 solid;
 }
 
-.div2 img{
-    display: flex;
-    flex-direction: column;
-   border: 5px #343434 solid;
-}
-.div3 img{
-    display: flex;
-    flex-direction: column;
-    border: 5px #343434 solid;
-}
-.div4 img{
-     display: flex;
-flex-direction: column;
-border: 5px #343434 solid;
-}
 head{
     color: aliceblue;
 }
@@ -55,23 +50,25 @@ head{
 .nav{
     width: 100%;
     background-color: #000; 
-    height: 80px;}
-    .nav ul{
-        float: right;
-        margin-right: 20px;
-    }
-    .nav ul li {
-        display: inline-block;
-        line-height: 80px;
-        margin: 0 5px;
-    }
-        
-    .nav ul li a{
-        line-height: 80px;
-        color: aliceblue;
-        margin: 0 5px;
-        display: inline-block;}
-        
+    height: 80px;
+}
+.nav ul{
+    float: right;
+    margin-right: 20px;
+}
+.nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+    
+.nav ul li a{
+    line-height: 80px;
+    color: aliceblue;
+    margin: 0 5px;
+    display: inline-block;
+
+}
 .enlace {
     position: absolute;
     padding: 20px 50px;
@@ -82,18 +79,9 @@ head{
     color: #000;
 }
         
-        .logo{
-            height: 40px;
-         }
-      *{
-            font-family: 'M PLUS Rounded 1c', sans-serif;
-            font-family: 'Sora', sans-serif;
-            padding: 0;
-            margin: 0;
-            text-decoration: none;
-            list-style: none;
-            box-sizing: border-box;}
-
+.logo{
+    height: 40px;
+}
 
 .checkbtn{
     font-size: 30px;
@@ -107,7 +95,13 @@ head{
 #check{
     display: none;
 }
-        
+
+.foto{
+    height: 80%;
+    width: 80%;
+    object-fit: cover; /* Recorta la imagen sin deformarla */
+    object-position: center;
+}        
 @media (max-width: 952px){
     .enlace{
         padding-left: 20px;
@@ -129,6 +123,7 @@ head{
         left: -100%;
         text-align: center;
         transition: all .5s;
+        z-index: 0;
     }
     nav ul li{
         display: block;
@@ -147,57 +142,6 @@ head{
     }
 }
 
-.checkbtn{
-    font-size: 30px;
-    color: #fff;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-#check{
-    display: none;
-}
-        
-@media (max-width: 952px){
-    .enlace{
-        padding-left: 20px;
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
-}
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    li a:hover, li a.active{
-        background: none;
-        color: red;
-    }
-    #check:checked ~ ul{
-        left:0;
-    }
-}
 
 
 
