--- a/miestilo.css
+++ b/miestilo.css
@@ -11,7 +11,13 @@
 
 /*MENU o NAV*/
 
-
+.TituloPagina {
+    text-align: center;
+    background-color: black;
+    color: rgb(255, 255, 255);
+    margin: 0%;
+}
+    
 .nav{
     width: 100%;
     background-color: #000; 
@@ -58,8 +64,6 @@ footer{
     margin: 50px;
     display: flex;
     display: inline;
-
-
 }
 
 .listaContactos2{
